pkg/config/analysis/analyzers/testdata/virtualservice_internal_gateway_ref.yaml
# The following virtual service should cause the warning IST0165 because it references a generated internal gateway.
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - "foo.com"
  gateways:
    - "istio-ingress/gateway-istio-autogenerated-k8s-gateway-foo"
  http:
    - route:
        - destination:
            host: httpbin
            port:
              number: 80
